<resources>
    <string name="app_name">豆丁工匠</string>
    <string name="splash_bottom_text">汇众智 共创造 助力中国智造</string>
    <string name="selecte_photo_from_gallery">从相册选择图片</string>
    <string name="take_a_photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="now_register">立即注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="user_name">账号</string>
    <string name="pass_word">密码</string>
    <string name="old_pass_word">旧密码</string>
    <string name="new_pass_word">新密码</string>
    <string name="pass_word_agin">确认密码</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="please_input_username">请填写账号！</string>
    <string name="please_input_new_pass_word">请填写6-16位新密码！</string>
    <string name="please_input_old_pass_word">请填写旧密码！</string>
    <string name="please_input_true_pass_word">请填写合法的密码（6~16位）！</string>
    <string name="please_input_true_confirm_pass_word">请填写合法的确认密码（6~16位）！</string>
    <string name="pwd_so_short">请填写6-16位密码！</string>
    <string name="confirm_so_short">请填写6-16位确认密码！</string>
    <string name="password_not_equals_confirm">两次密码输入不一致！请重新输入！</string>
    <string name="home">首页</string>
    <string name="community">社区</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="quetions">密保问题</string>
    <string name="please_input_answer">请填写密保问题答案！</string>
    <string name="answerquetion">密保问题答案</string>
    <string name="forget_password">找回密码</string>
    <string name="update_password">修改密码</string>
    <string name="forget_password_success">找回密码成功！</string>
    <string name="network_is_not_connection">网络请求失败，请稍后重试！</string>
    <string name="update_password_success">修改密码成功！请重新登录！</string>
    <string name="update_password_faild">修改密码失败！</string>
    <string name="custom_hall">订制大厅</string>
    <string name="click_login">点击登录</string>
    <string name="user_center">用户中心</string>
    <string name="mine_favorite">我的收藏</string>
    <string name="app_settings">应用设置</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="about_us">关于豆丁工匠</string>
    <string name="logout_success">已退出登录</string>


    <string-array name="questions">
        <item>您高中班主任的名字是？</item>
        <item>您的启蒙老师是？</item>
        <item>对您影响最大的人名字是？</item>
        <item>您最好的朋友名字是？</item>
        <item>您母亲的生日是？</item>
        <item>您父亲的生日是？</item>
        <item>您的大学学号是？</item>
    </string-array>

    <string-array name="classes">
        <item>全部</item>
        <item>创意</item>
        <item>专利</item>
        <item>订制</item>
        <item>代工</item>
        <item>众筹</item>
        <item>中国智造</item>
    </string-array>

    <string-array name="mine_classes_enterprise">
        <item>创意</item>
        <item>专利</item>
        <item>订制</item>
        <item>代工</item>
    </string-array>
    <string-array name="mine_classes_personal">
        <item>创意</item>
        <item>专利</item>
        <item>订制</item>
    </string-array>

    <string-array name="patent_type">
        <item>发明创造型</item>
        <item>外观新颖型</item>
        <item>实用型</item>
    </string-array>

    <string-array name="secrecyType">
        <item>完全公开</item>
        <item>部分保密</item>
        <item>完全保密</item>
    </string-array>
    <string-array name="made_state">
        <item>公开</item>
        <item>不公开</item>
        <item>成功</item>
    </string-array>


    <string-array name="order_classes_name">
        <item>家具订制</item>
        <item>服装订制</item>
        <item>礼品订制</item>
        <item>机械产品</item>
        <item>电子产品</item>
        <item>其他</item>
        <item>订制工厂</item>
        <item>发布订制</item>
    </string-array>
    <string-array name="order_add_classes_name">
        <item>家具订制</item>
        <item>服装订制</item>
        <item>礼品订制</item>
        <item>机械产品</item>
        <item>电子产品</item>
        <item>其他</item>
    </string-array>

    <string-array name="price">
        <item>全部价格</item>
        <item>1-1000</item>
        <item>1001-5000</item>
        <item>5001-10000</item>
        <item>10001-20000</item>
        <item>20001-50000</item>
        <item>50001-100000</item>
        <item>100001-1000000</item>
    </string-array>


    <string name="title_activity_user_center">UserCenterActivity</string>
    <string name="logout">退出登录</string>
    <string name="user_info">用户资料</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="nick_name">昵称</string>
    <string name="age">年龄</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="address">所在地</string>
    <string name="not_set">未填写</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="edit_user_info">编辑用户信息</string>
    <string name="enterprise_name">名称</string>
    <string name="enterprise_scale">规模</string>
    <string name="enterprise_field">领域</string>
    <string name="enterprise_area">区域</string>
    <string name="enterprise_address">地址</string>
    <string name="enterprise_link_name">联系人</string>
    <string name="enterprise_contact">联系方式</string>
    <string name="about_us_content">
        豆丁工匠是一款“制造业+互联网”服务平台。前身为智能手机充电站组装工厂，目前已在西安市客运站、旅游景点、餐饮、酒店、娱乐场所铺设近百台并进行豆丁工匠的广告宣传推广。 我们以自己的工厂为试验模型，参考国内各省市制造企业提出的不同疑问，深入剖析制造业所遇到的困扰难点，最终开发出移动应用豆丁工匠。豆丁工匠总部位于古都西安，团队人数33人，平均年龄25岁，已在深圳开设分公司进行线下推广合作。产品经过精细打磨，最终于2016年11月正式上线。
        豆丁工匠APP作为制造业+互联网服务平台，主要为用户提供创意发布、专利申请、委托代工、私人订制、众筹等一站式服务。每一位客户都可能对产品的改善有很好的创意，我们特别愿意与充满创意、热爱发明、追求完美与怀揣各式各样想法的您携手同行。
        首先，您可以通过在App上注册，提供自己的创意方案，同时对创意进行保护，找到理想的工厂代工或者打造属于自己独一无二的产品，这一切交给专业的人才和机构，让工厂与您共同创造、让您用知识创意赚取利益、让产品服务大众，让想法变成产品，让创意变成现实，助力中国智造，无论您从事什么职业，拥有属于自己的专利或者产品将可能为您创造更多财富。
        其次，我们拥有工厂，特别欢迎各类制造业创始人共同探讨制造业难点，在寒冬中抱团取暖。共同寻找制造业的突破口，打破瓶颈，实现我们共同的目标。
        再者，我们欢迎热爱中国制造，拥有民族情怀的企业共同树立一个创新的平台，围绕制造业让我们共同尽一份力，加入豆丁工匠塑造更多民族名优品牌，目前APP已经上线并拥有珠三角，深圳，长三角，永康，温州产业带部分工厂进驻，包括陕西本地多家工厂已经进驻推广，诚邀各地企业加盟运营，寻找各省市加盟商，让我们一起努力，振兴中国制造！
    </string>
    <string name="app_share_text">让智慧照进现实、让创意成为产品。汇众智，共创造，让世界爱上中国制造</string>
    <string name="search">搜索</string>
    <string name="input_text_search">输入关键字搜索</string>
    <string name="patent">专利</string>
    <string name="all">全部</string>
    <string name="news">最新</string>
    <string name="hot">热门</string>
    <string name="loading_data">加载数据中...</string>
    <string name="originality">创意</string>
    <string name="order">私人订制</string>
    <string name="order_factory">订制工厂</string>

    <string name="factory">中国智造</string>

    <string-array name="originalityTypes">
        <item>农林牧副渔</item>
        <item>通讯计算机</item>
        <item>粮油食品饮料</item>
        <item>医疗卫生保健</item>
        <item>交通车辆运输</item>
        <item>建筑材料五金</item>
        <item>轻工日用家具</item>
        <item>文教体育娱乐</item>
        <item>化工石油冶金</item>
        <item>机械设备装置</item>
        <item>电子电器仪表</item>
        <item>环保除尘采矿</item>
        <item>能源采暖炉灶</item>
        <item>造纸纺织服装</item>
        <item>其他专利类别</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="mine_originality">我的创意</string>
    <string name="mine_patent">我的专利</string>
    <string name="mine_order">我的订制</string>
    <string name="mine_oem">我的代工</string>
    <string name="comment">评论</string>
    <string-array name="reward_mod">
        <item>单人中标</item>
        <item>多人中标</item>
    </string-array>
    <string-array name="purchaseTypes">
        <item>机械设备</item>
        <item>家装建材</item>
        <item>电工电气</item>
        <item>电子元件</item>
        <item>安全防护</item>
        <item>仪	器仪表</item>
        <item>冶金矿产</item>
        <item>交通运输</item>
        <item>化工环保</item>
        <item>五金工具</item>
        <item>包装塑料</item>
        <item>照明工业</item>
        <item>纺织皮革</item>
        <item>标	准件	</item>
        <item>汽车用品</item>
        <item>通信产品</item>
        <item>其他</item>
    </string-array>
    <string-array name="purchase_time">
        <item>7天内</item>
        <item>15天内</item>
        <item>1个月内</item>
        <item>3个月内</item>
    </string-array>
    <string-array name="fac_filed">
        <item>经营范围</item>
        <item>机械设备</item>
        <item>家装建材</item>
        <item>电工电气</item>
        <item>电子元件</item>
        <item>安全防护</item>
        <item>仪	器仪表</item>
        <item>冶金矿产</item>
        <item>交通运输</item>
        <item>化工环保</item>
        <item>五金工具</item>
        <item>包装塑料</item>
        <item>照明工业</item>
        <item>纺织皮革</item>
        <item>标	准件	</item>
        <item>汽车用品</item>
        <item>通信产品</item>
        <item>其他</item>
    </string-array>

    <string-array name="fac_type">
        <item>全部工厂</item>
        <item>代工工厂</item>
        <item>订制工厂</item>
    </string-array>
</resources>
