<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_lightE"
              android:orientation="vertical">
    <View style="@style/LineGrey1px"
          android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/user_name"/>
                <TextView
                    android:id="@+id/enterprise_id"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1px"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/enterprise_name"/>
                <TextView
                    android:id="@+id/enterprise_name"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1px"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/enterprise_scale"/>
                <TextView
                    android:id="@+id/enterprise_scale"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1px"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/enterprise_field"/>
                <TextView
                    android:id="@+id/enterprise_field"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1px"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/enterprise_area"/>
                <TextView
                    android:id="@+id/enterprise_area"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
        </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="6dp"
          android:background="@drawable/shape_shadow_v_up"/>
    <View style="@style/LineGrey1px"
          android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoNames"
                android:text="@string/enterprise_address"/>
            <TextView
                android:id="@+id/enterprise_address"
                style="@style/UserInfoValues"
                android:maxLines="2"
                android:text="@string/not_set"/>
        </LinearLayout>
        <View style="@style/LineGrey1px"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoNames"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/enterprise_email"
                style="@style/UserInfoValues"
                android:text="@string/not_set"/>
        </LinearLayout>
        <View style="@style/LineGrey1px"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoNames"
                android:text="@string/enterprise_link_name"/>
            <TextView
                android:id="@+id/enterprise_link_name"
                style="@style/UserInfoValues"
                android:text="@string/not_set"/>
        </LinearLayout>
        <View style="@style/LineGrey1px"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoNames"
                android:text="@string/enterprise_contact"/>
            <TextView
                android:id="@+id/enterprise_contact"
                style="@style/UserInfoValues"
                android:text="@string/not_set"/>
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="6dp"
          android:background="@drawable/shape_shadow_v_up"/>

</LinearLayout>