<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lightE"
    android:orientation="vertical"
    tools:context="com.ddgj.dd.activity.EditPersonalUserInfoActivity">
    <RelativeLayout
        style="@style/ActionBarTheme">
        <ImageView
            style="@style/TitleBarImageTheme"
            android:onClick="backClick"
            android:src="@mipmap/ic_chevron_left_white_24dp"/>
        <TextView
            style="@style/TitleBarTextTheme"
            android:text="@string/edit_user_info"/>
        <TextView
            style="@style/TitleBarRightTextTheme"
            android:onClick="saveClick"
            android:text="@string/save"/>
    </RelativeLayout>
    <View style="@style/LineGrey1dp"
          android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/name"
                style="@style/UserInfoValues"/>
        </LinearLayout>
        <View style="@style/LineGrey1dp"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/nick_name"/>
            <EditText
                android:id="@+id/nick_name"
                style="@style/UserInfoValues"/>
        </LinearLayout>
        <View style="@style/LineGrey1dp"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/gender"/>
            <RadioGroup
                android:id="@+id/gender"
                style="@style/UserInfoValues"
                android:layout_weight="7"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/secret"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="保密"/>
                <RadioButton
                    android:id="@+id/boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="男"/>
                <RadioButton
                    android:id="@+id/girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:layout_weight="5"
                    android:text="女"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            style="@style/UserInfoLinerLayout"
            android:onClick="ageClick">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/age"/>
            <TextView
                android:id="@+id/age"
                style="@style/UserInfoValues"
                android:layout_weight="7"
                android:text="@string/not_set"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_chevron_right_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="6dp"
          android:background="@drawable/shape_shadow_v_up"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/phone_number"/>
            <EditText
                android:id="@+id/phone_number"
                style="@style/UserInfoValues"/>
        </LinearLayout>
        <View style="@style/LineGrey1dp"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/email"
                style="@style/UserInfoValues"
                android:inputType="textEmailAddress"/>
        </LinearLayout>
        <View style="@style/LineGrey1dp"
              android:layout_marginLeft="16dp"/>
        <LinearLayout
            style="@style/UserInfoLinerLayout">
            <TextView
                style="@style/UserInfoEditNames"
                android:text="@string/address"/>
            <EditText
                android:id="@+id/address"
                style="@style/UserInfoValues"/>
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="6dp"
          android:background="@drawable/shape_shadow_v_up"/>
</LinearLayout>
