<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lightE"
    android:orientation="vertical">

    <View style="@style/LineGrey1dp"
          android:layout_marginTop="16dp"/>
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/name"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1dp"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/gender"/>
                <TextView
                    android:id="@+id/gender"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1dp"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/age"/>
                <TextView
                    android:id="@+id/age"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1dp"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/nick_name"/>
                <TextView
                    android:id="@+id/nick_name"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <View style="@style/LineGrey1dp"
          android:layout_marginTop="16dp"/>
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/phone_number"/>
                <TextView
                    android:id="@+id/phone_number"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1dp"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/email"/>
                <TextView
                    android:id="@+id/email"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
            <View style="@style/LineGrey1dp"
                  android:layout_marginLeft="16dp"/>
            <LinearLayout
                style="@style/UserInfoLinerLayout">
                <TextView
                    style="@style/UserInfoNames"
                    android:text="@string/address"/>
                <TextView
                    android:id="@+id/address"
                    style="@style/UserInfoValues"
                    android:text="@string/not_set"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>