<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ddgj.dd.activity.LoginActivity">
    <RelativeLayout
        style="@style/ActionBarTheme">
        <ImageView
            style="@style/TitleBarImageTheme"
            android:onClick="backClick"
            android:src="@mipmap/ic_chevron_left_white_24dp"/>
        <TextView
            style="@style/TitleBarTextTheme"
            android:text="@string/user_login"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ddgj.dd.view.ClearEditText
                android:id="@+id/act_login_et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_edit_text_bg"
                android:drawableLeft="@mipmap/ic_account_box_grey600_24dp"
                android:drawablePadding="4dp"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp"/>
            <com.ddgj.dd.view.ClearEditText
                android:id="@+id/act_login_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_login_edit_text_bg"
                android:drawableLeft="@mipmap/ic_lock_grey600_24dp"
                android:drawablePadding="4dp"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_login_btn_bg"
                android:elevation="0dp"
                android:onClick="loginClick"
                android:text="@string/login"
                android:textColor="@drawable/selector_login_btn_text"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
            android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="forgetPasswordClick"
                    android:text="@string/forget_pwd"/>
                <View android:layout_width="1dp" android:layout_height="16dp"
                android:background="@color/colorPrimary"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="registerClick"
                    android:text="@string/now_register"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
