<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lightE"
    android:orientation="vertical"
    tools:context="com.ddgj.dd.activity.MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.ddgj.dd.view.CustomViewPager
            android:id="@+id/act_main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.ddgj.dd.view.CustomViewPager>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/view"
            android:layout_alignParentBottom="true"
            android:background="@drawable/up_shadow"/>
    </RelativeLayout>
    <View style="@style/LineGrey1px"/>

    <RadioGroup
        android:id="@+id/act_main_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_lightE"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/act_main_radio_btn_home"
            style="@style/RadioBtnStyle"
            android:checked="true"
            android:drawableTop="@drawable/selector_radio_btn_home"
            android:text="@string/home"/>
        <RadioButton
            android:id="@+id/act_main_radio_btn_community"
            style="@style/RadioBtnStyle"
            android:drawableTop="@drawable/selector_radio_btn_community"
            android:text="@string/community"/>
        <RadioButton
            android:id="@+id/act_main_radio_btn_message"
            style="@style/RadioBtnStyle"
            android:drawableTop="@drawable/selector_radio_btn_message"
            android:text="@string/message"/>
        <RadioButton
            android:id="@+id/act_main_radio_btn_mine"
            style="@style/RadioBtnStyle"
            android:drawableTop="@drawable/selector_radio_btn_mine"
            android:text="@string/mine"/>

    </RadioGroup>
</LinearLayout>
